HADOOP-4204. Fix findbugs warnings related to unused variables, naive Number subclass instantiation, Map iteration, and badly scoped inner classes. Contributed by Suresh Srinivas.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/core/trunk@700589 13f79535-47bb-0310-9956-ffa450edef68