@@ -77,7 +77,7 @@ public class MetricsRecordImpl implements MetricsRecord {
    * @throws MetricsException if the tagName conflicts with the configuration
    */
   public void setTag(String tagName, int tagValue) {
-    tagTable.put(tagName, new Integer(tagValue));
+    tagTable.put(tagName, Integer.valueOf(tagValue));
   }
     
   /**
@@ -99,7 +99,7 @@ public class MetricsRecordImpl implements MetricsRecord {
    * @throws MetricsException if the tagName conflicts with the configuration
    */
   public void setTag(String tagName, short tagValue) {
-    tagTable.put(tagName, new Short(tagValue));
+    tagTable.put(tagName, Short.valueOf(tagValue));
   }
     
   /**
@@ -110,7 +110,7 @@ public class MetricsRecordImpl implements MetricsRecord {
    * @throws MetricsException if the tagName conflicts with the configuration
    */
   public void setTag(String tagName, byte tagValue) {
-    tagTable.put(tagName, new Byte(tagValue));
+    tagTable.put(tagName, Byte.valueOf(tagValue));
   }
     
   /**
@@ -129,7 +129,7 @@ public class MetricsRecordImpl implements MetricsRecord {
    * conflicts with the configuration
    */
   public void setMetric(String metricName, int metricValue) {
-    setAbsolute(metricName, new Integer(metricValue));
+    setAbsolute(metricName, Integer.valueOf(metricValue));
   }
     
   /**
@@ -153,7 +153,7 @@ public class MetricsRecordImpl implements MetricsRecord {
    * conflicts with the configuration
    */
   public void setMetric(String metricName, short metricValue) {
-    setAbsolute(metricName, new Short(metricValue));
+    setAbsolute(metricName, Short.valueOf(metricValue));
   }
     
   /**
@@ -165,7 +165,7 @@ public class MetricsRecordImpl implements MetricsRecord {
    * conflicts with the configuration
    */
   public void setMetric(String metricName, byte metricValue) {
-    setAbsolute(metricName, new Byte(metricValue));
+    setAbsolute(metricName, Byte.valueOf(metricValue));
   }
     
   /**
@@ -189,7 +189,7 @@ public class MetricsRecordImpl implements MetricsRecord {
    * conflicts with the configuration
    */
   public void incrMetric(String metricName, int metricValue) {
-    setIncrement(metricName, new Integer(metricValue));
+    setIncrement(metricName, Integer.valueOf(metricValue));
   }
     
   /**
@@ -213,7 +213,7 @@ public class MetricsRecordImpl implements MetricsRecord {
    * conflicts with the configuration
    */
   public void incrMetric(String metricName, short metricValue) {
-    setIncrement(metricName, new Short(metricValue));
+    setIncrement(metricName, Short.valueOf(metricValue));
   }
     
   /**
@@ -225,7 +225,7 @@ public class MetricsRecordImpl implements MetricsRecord {
    * conflicts with the configuration
    */
   public void incrMetric(String metricName, byte metricValue) {
-    setIncrement(metricName, new Byte(metricValue));
+    setIncrement(metricName, Byte.valueOf(metricValue));
   }
     
   /**
